# experiments

./: .gitignore  CMakeLists.txt
include/: str.h  stringex.h  util.h  window.h
include/math/: math.h
include/math/pregen/: pregen_cos_sin_tan_ctan.h
src/: main.c  stringex.c
